--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -17,7 +17,7 @@
     </nav>
   </header>
   <main>
-    <articln>
+    <article>
       <h2>社会</h2>
       <section>
         <h3>和菓子店も「トリックオアトリート！」</h3>
@@ -25,7 +25,7 @@
         今年は大手和菓子店5社がハロウィン向けの和菓子セットを共同開発しました。</p>
         <audio src="ichi.mp3" controls></audio>
       </section>
-      <sectipn>
+      <section>
         <h3>私のおすすめ和菓子アンケートフォーム</h3>
         <form>
           <label>氏名</label>
@@ -61,8 +61,8 @@
           <input type="submit" value="送信">
           <input type="reset" value="リセット">
         </form>
-      </sectipn>
-    </articln>
+      </section>
+    </article>
     <article>
       <h2>テクノロジー</h2>
       <section>
